# magnum-vr-ui

./: .gitignore  CMakeLists.txt  COPYING  README.md
modules/: FindMagnumIntegration.cmake
src/: VrGallery.cpp
